[package]
name = "playground"
version = "0.1.0"
authors = ["zylkowski_a <arkadiuszzylkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.23", features = ["derive"] }
playground_2 = { path = "../playground_2" }
enum_dispatch = "0.3.7"